[package]
name = "time-format"
version = "0.1.0"
authors = ["Muneeb Rehman <muneeb.rehman@mi-c3.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.34"
eyre = {version ="0.6.12", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
